# mod-botjam

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: makefile.yml
db/: automod.json  logging.json
src/: _easy_mod_modal_slash.py  _oldhelp.py  automod.py  cog_management.py  easy_mod_modal_slash.py  error_handling.py  events.py  help.py  mod.py  moderation.py  slash.py  stuffs.py
src/utils/: __init__.py  embedgen.py  formats.py  json.py  logger.py  paginator.py  profanity_checker.py  time.py  views.py
